<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/menu_quiz" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_snakey"
            android:icon="@drawable/ic_game_videogame"
            android:title="@string/Snakey" />

        <item
            android:id="@+id/nav_wiki"
            android:icon="@drawable/ic_menu_library_books"
            android:title="@string/menu_histo" />
    </group>
</menu>
