<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quizbackground"
    android:padding="16dp"
    tools:context=".ui.quiz.Activity_quiz">

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question: 1/x"
        android:textColor="@color/black"
        android:layout_below="@+id/text_view_score"/>

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:text="@string/countdown"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="377dp"
        android:layout_height="103dp"
        android:layout_above="@+id/radio_group"
        android:text="Here will be the question text\nHere will be the question text\nHere will be the question text"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 1"/>

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 2"/>

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 3"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_button"/>


</RelativeLayout>